--- a/v3/assets/css/styles.css
+++ b/v3/assets/css/styles.css
@@ -1271,8 +1271,8 @@ html {
    =================================== */
 .version-switcher {
     position: fixed;
-    top: 20px;
-    right: 20px;
+    bottom: 20px;
+    left: 20px;
     z-index: 99999;
     display: flex;
     flex-direction: column;
